Criação de cenas com layout em three.js

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c  ./rollup.config.js --bundleConfigAsCjs",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "npm run build && nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,16 @@
   },
   "homepage": "https://github.com/PedroThiagoRoque/WFC-Arquitetura#readme",
   "dependencies": {
+    "bim-fragment": "^1.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
+    "openbim-components": "^1.3.2",
     "rollup": "^4.9.6",
-    "three": "^0.160.1"
+    "three": "^0.152.2",
+    "web-ifc": "^0.0.50"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.3"
   }
 }
