--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/PedroThiagoRoque/WFC-Arquitetura#readme",
   "dependencies": {
+    "@tarikjabiri/dxf": "^2.8.9",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
